--- a/menu-of-the-day.html
+++ b/menu-of-the-day.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Ansonika">
-    <title>PARADISE - Hotel and Bed&Breakfast Site Template</title>
+    <meta name="Anggiat" content="Ansonika">
+    <title>One Of A Kind Resort Bintan - Menu's</title>
     
     <!-- Favicons-->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon-16x16.png" type="image/x-icon">
     <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
@@ -48,19 +48,36 @@
 
     <section class="menu-section">
         <div class="full-container">
-            <div class="intro p-3"><img src="img/logo.png" width="135" height="45" alt="" class="mb-3"><br>Menu of the Day<span>Maiores eos labore ratione illum excepturi neque</span></div>
+            <div class="intro p-3"><img src="img/logo_ooak.png" width="135" height="45" alt="" class="mb-3"><br><br>Azura Bistro Menu
+            <!--     <span>To Indulge yuorself at out sophisticated
+                and comfy villa, we bring you to the center of cuisine, Azura Bistro & Day Club, which can cater yout with the mixture of western
+                and Asian as well as Indonesian food that we offer.
+                <br>
+                <span> Located at Ground Floor behind the resort lobby, we shall serve you with our smile and sincered staff, with fresh air
+                    ambiance, which will take you to the unforgettable meal experience. Open from 7.00 a.m to 10.00 p.m for breakfast, continue
+                    to lunch, then sundown coffe tea service, and ended with chill dinner.
+                </span>
+                <br>
+                <span>
+                    We wait and always be ready
+                    to serve you
+                </span>
+            </span> --></div>
+            <div class="intro p-3"><img src="img/AW Logo-03.png" width="150" height="60" alt="" class="mb-3"></div>
         </div>
     </section> <!-- End  menu-section-->
 
     <section class="menu-section">
         <div class="full-container">
-            <div class="half-container"></div>
+            <div class="half-container">
+                
+            </div> 
 
             <div class="half-container">
-                <div class="txt_container">
+                <div class="txt_container-">
                     <div class="m_title">
-                        <h2>Starters</h2>
-                        <p>A dish of your choice from the list below</p>
+                        <h2>Appetizer</h2>
+                        <p>Before love, there must be something that Started It</p>
                     </div>
                     <ul>
                         <li>
